[gd_scene load_steps=8 format=3 uid="uid://dpu4tdyhnu4pk"]

[ext_resource type="Script" path="res://scenes/obstacle/obstacle.gd" id="1_a0jcc"]
[ext_resource type="Texture2D" uid="uid://woc57odtxou5" path="res://assets/images/obstacle.png" id="2_m5igd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s64e2"]
size = Vector2(14, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nsmo"]
size = Vector2(10, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvry6"]
size = Vector2(14, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vrr1m"]
size = Vector2(10, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjr87"]
size = Vector2(1.79873, 80)

[node name="Obstacle" type="Node2D"]
script = ExtResource("1_a0jcc")

[node name="Top" type="Node2D" parent="."]
position = Vector2(2.08165e-12, -83)

[node name="Sprite2D" type="Sprite2D" parent="Top"]
texture = ExtResource("2_m5igd")
flip_v = true

[node name="Area2D" type="Area2D" parent="Top"]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top/Area2D"]
shape = SubResource("RectangleShape2D_s64e2")

[node name="StaticBody2D" type="StaticBody2D" parent="Top"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top/StaticBody2D"]
position = Vector2(-2.08165e-12, -1)
shape = SubResource("RectangleShape2D_8nsmo")

[node name="Bottom" type="Node2D" parent="."]
position = Vector2(0, 83)

[node name="Sprite2D" type="Sprite2D" parent="Bottom"]
texture = ExtResource("2_m5igd")

[node name="Area2D" type="Area2D" parent="Bottom"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom/Area2D"]
shape = SubResource("RectangleShape2D_xvry6")

[node name="StaticBody2D" type="StaticBody2D" parent="Bottom"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom/StaticBody2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_vrr1m")

[node name="ScoreZone" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="ScoreZone"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreZone/Area2D"]
shape = SubResource("RectangleShape2D_gjr87")

[connection signal="body_entered" from="Top/Area2D" to="." method="_on_hit_obstacle"]
[connection signal="body_entered" from="Bottom/Area2D" to="." method="_on_hit_obstacle"]
[connection signal="body_entered" from="ScoreZone/Area2D" to="." method="_on_area_2d_body_entered"]
